Simplified text dataset downloading

--- a/notebooks/text_prediction.ipynb
+++ b/notebooks/text_prediction.ipynb
@@ -99,6 +99,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Download the dataset if it doesn't exist\n",
+    "if not Path(dataset_path).exists():\n",
+    "    import kagglehub; import zipfile\n",
+    "    try: os.remove(\"../data/AllCombined.txt\")\n",
+    "    except: pass\n",
+    "    with zipfile.ZipFile(kagglehub.dataset_download(\n",
+    "        \"ffatty/plain-text-wikipedia-simpleenglish\", \"AllCombined.txt\"\n",
+    "    ), \"r\") as zip_ref:\n",
+    "        zip_ref.extract(\"AllCombined.txt\", \"../data\")\n",
+    "    os.rename(\"../data/AllCombined.txt\", dataset_path)\n",
+    "\n",
     "dataset = ByteFileDataset(dataset_path, length_cutoff=training_length_cutoff)\n",
     "opt_dataset = ByteFileDataset(dataset_path, length_cutoff=opt_length_cutoff)"
    ]
