Simplified optimize_hyperparameters

--- a/notebooks/hypernet.ipynb
+++ b/notebooks/hypernet.ipynb
@@ -101,7 +101,7 @@
     "        n_trials=opt_trials,\n",
     "        num_epochs=opt_num_epochs,\n",
     "        batch_size=opt_batch_size,\n",
-    "        train_model=\"hypernet\",\n",
+    "        train_function=train_hypernet,\n",
     "    )\n",
     "    print(f\"Hyperparameter optimization completed. Results stored in {study_path}\")"
    ]
