--- a/notebooks/text_prediction.ipynb
+++ b/notebooks/text_prediction.ipynb
@@ -140,7 +140,7 @@
     "        n_trials=opt_trials,\n",
     "        num_epochs=opt_num_epochs,\n",
     "        batch_size=opt_batch_size,\n",
-    "        train_model=\"text_prediction\",\n",
+    "        train_function=train_text_prediction,\n",
     "    )\n",
     "    print(f\"Hyperparameter optimization completed. Results stored in {study_path}\")"
    ]
